--- a/public_html/FirstMethodBased.html
+++ b/public_html/FirstMethodBased.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bootstrap Example</title>
+        <title>Withour use JPDB script </title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet"
@@ -108,12 +108,12 @@ and open the template in the editor.
                     return;
                 }
                 var putReqStr = createPUTRequest("90935934|-31948847972571272|90944651",
-                        jsonStr, "Employee", "Emp-Relation");
-                alert(putReqStr);
+                        jsonStr, "Employee", "Emp-Rel");
+      //          alert(putReqStr);
                 jQuery.ajaxSetup({async: false});
                 var resultObj = executeCommand(putReqStr,
                         "http://api.login2explore.com:5577", "/api/iml");
-                alert(JSON.stringify(resultObj));
+        //        alert(JSON.stringify(resultObj));
                 jQuery.ajaxSetup({async: true});
                 resetForm();
             }
